--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
 
 # REACT_APP_API_BASE_URL = https://nodebackend.sumagoinfotech.com/
-REACT_APP_API_BASE_URL = http://127.0.0.1:8000/
+# REACT_APP_API_BASE_URL = http://127.0.0.1:8000/
+REACT_APP_API_BASE_URL = https://api.antivibrations.com/
+
+
 # REACT_APP_API_BASE_URL = https://sumagodemo.com/
 NODE_ENV=production
 GENERATE_SOURCEMAP=false
-
+# 
 # local
 # NOCAPTCHA_SITEKEY=6Le657EpAAAAADHl0EnUi-58y19XOcORV9dehjAz
 # NOCAPTCHA_SECRET=6Le657EpAAAAAP30y7YreFO_-I8ouSWGTuUXtQKL
